plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
//	parseDoc
	implementation 'org.jsoup:jsoup:1.17.2'

////	aws
	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.2.0-M1'
	implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.2.0-M1'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.3.0'

//	Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

//	JWT 최신버전을 쓰느냐 마느냐는 확인이 필요함
	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

//	jakarta validation
	implementation 'jakarta.validation:jakarta.validation-api'
//	jakarra persistance
	implementation "jakarta.persistence:jakarta.persistence-api"
	// MySQL
	implementation 'mysql:mysql-connector-java:8.0.33'
	// JPA 설정
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
